# SQLBench-OpenEnv

./: .env.example  .gitignore  ANALYTICS_IMPLEMENTATION_COMPLETE.md  ANALYTICS_VALIDATION_REPORT.md  BENCHMARK_API_FEATURE.md  DATABASE_PERSISTENCE_FEATURE.md  DATABASE_PERSISTENCE_QA_REPORT.md  Dockerfile  EDGE_CASE_TEST_REPORT.md  END_TO_END_QA_REPORT.md  GATEWAY_MIGRATION.md  LICENSE  OPENROUTER_API_TEST_REPORT.md  PERFORMANCE_ENGINEERING_REPORT.md  PERSISTENCE_SUCCESS_SUMMARY.md  QUICK_FIX.md  RATE_LIMITING_STRESS_TEST_REPORT.md  RATE_LIMIT_OPTIMIZATION.md  README.md  UI_BEHAVIOR_TEST_REPORT.md  analytics.py  app.py  database.py  deploy_to_hf.py  final_api_validation.py  inference.py  logging_config.py  openenv.yaml  performance_monitor.py  pyproject.toml  quick_api_test.py  quick_performance_test.py  requirements.txt  run_benchmark.py  server.py  simple_analytics_validation.py  simple_performance_test.py  simple_persistence_test.py  simple_ui_test.py  space_config.yml  (+16 more)
benchmark/: __init__.py  error_taxonomy.py  leaderboard.py  models.py  models.yaml  report.py  runner.py
benchmark_output/: benchmark_results.json  error_taxonomy.json  leaderboard.json  model_analysis_report.txt
env/: __init__.py  database.py  environment.py  graders.py  models.py
server/: app.py
sql_query_env/: environment.py  reward.py  tasks.py
tests/: test_benchmark.py  test_env.py  test_graders.py
