[project]
name = "sql-query-env"
version = "0.1.0"
description = "OpenEnv benchmark for evaluating LLM agents on SQL debugging and query optimization tasks."
authors = [
  { name="Naresh Chandu" }
]
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "openenv-core==0.1.0",
  "openai==1.30.1",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.1"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
